Added default sinks and updated documentation